--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,42 @@
 		<link href="tailwind.min.css" rel="stylesheet" type="text/css" />
 		<meta http-equiv="refresh" content="60">
 
+		<title>RePa | Start Accepting Recurring Crypto Payments</title>
+		<meta name="title" content="RePa | Start Accepting Recurring Crypto Payments" />
+		<meta
+			name="description"
+			content="RePa is a decentralized protocol built on Ethereum EVM, that allows users and merchants to carry out trustless recurring cryptocurrency payments using smart contracts."
+		/>
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://repa.gg/" />
+		<meta property="og:title" content="RePa | Start Accepting Recurring Crypto Payments" />
+		<meta
+			property="og:description"
+			content="RePa is a decentralized protocol built on Ethereum EVM, that allows users and merchants to carry out trustless recurring cryptocurrency payments using smart contracts."
+		/>
+		<meta property="og:image" content="https://repa.gg/logo.png" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://repa.gg/" />
+		<meta property="twitter:title" content="RePa | Start Accepting Recurring Crypto Payments" />
+		<meta
+			property="twitter:description"
+			content="RePa is a decentralized protocol built on Ethereum EVM, that allows users and merchants to carry out trustless recurring cryptocurrency payments using smart contracts."
+		/>
+		<meta property="twitter:image" content="https://repa.gg/logo.png" />
+
+
 	<body>
 		<div id="app"></div>
-
+		
 		<script>
-			window.ethereum.on('chainChanged', (_chainId) => window.location.reload());
+			if (window.ethereum) {
+				window.ethereum.on('chainChanged', (_chainId) => window.location.reload());
+				window.ethereum.on('accountsChanged', (_accounts) => window.location.reload());
+			}
 		</script>
 	</body>
 </html>
