--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="">
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-		<link href="tailwind.min.css" rel="stylesheet" type="text/css" />
-		<meta http-equiv="refresh" content="60">
 
-		<title>RePa | Start Accepting Recurring Crypto Payments</title>
-		<meta name="title" content="RePa | Start Accepting Recurring Crypto Payments" />
-		<meta
-			name="description"
-			content="RePa is a decentralized protocol built on Ethereum EVM, that allows users and merchants to carry out trustless recurring cryptocurrency payments using smart contracts."
-		/>
+<head>
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+	<link href="tailwind.min.css" rel="stylesheet" type="text/css" />
+	<meta http-equiv="refresh" content="60">
 
-		<!-- Open Graph / Facebook -->
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://repa.gg/" />
-		<meta property="og:title" content="RePa | Start Accepting Recurring Crypto Payments" />
-		<meta
-			property="og:description"
-			content="RePa is a decentralized protocol built on Ethereum EVM, that allows users and merchants to carry out trustless recurring cryptocurrency payments using smart contracts."
-		/>
-		<meta property="og:image" content="https://repa.gg/logo.png" />
+	<title>DAKOPAY | Start Accepting Recurring Crypto Payments</title>
+	<meta name="title" content="DAKOPAY | Start Accepting Recurring Crypto Payments" />
+	<meta name="description"
+		content="DAKOPAY is a decentralized protocol built on Ethereum EVM, that allows users and merchants to carry out trustless recurring cryptocurrency payments using smart contracts." />
 
-		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="https://repa.gg/" />
-		<meta property="twitter:title" content="RePa | Start Accepting Recurring Crypto Payments" />
-		<meta
-			property="twitter:description"
-			content="RePa is a decentralized protocol built on Ethereum EVM, that allows users and merchants to carry out trustless recurring cryptocurrency payments using smart contracts."
-		/>
-		<meta property="twitter:image" content="https://repa.gg/logo.png" />
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://dakopay.com/" />
+	<meta property="og:title" content="DAKOPAY | Start Accepting Recurring Crypto Payments" />
+	<meta property="og:description"
+		content="DAKOPAY is a decentralized protocol built on Ethereum EVM, that allows users and merchants to carry out trustless recurring cryptocurrency payments using smart contracts." />
+	<meta property="og:image" content="https://dakopay.com/logo.png" />
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://dakopay.com/" />
+	<meta property="twitter:title" content="DAKOPAY | Start Accepting Recurring Crypto Payments" />
+	<meta property="twitter:description"
+		content="DAKOPAY is a decentralized protocol built on Ethereum EVM, that allows users and merchants to carry out trustless recurring cryptocurrency payments using smart contracts." />
+	<meta property="twitter:image" content="https://dakopay.com/logo.png" />
 
 
-	<body>
-		<div id="app"></div>
-		
-		<script>
-			if (window.ethereum) {
-				window.ethereum.on('chainChanged', (_chainId) => window.location.reload());
-				window.ethereum.on('accountsChanged', (_accounts) => window.location.reload());
-			}
-		</script>
-	</body>
+<body>
+	<div id="app"></div>
+
+	<script>
+		if (window.ethereum) {
+			window.ethereum.on('chainChanged', (_chainId) => window.location.reload());
+			window.ethereum.on('accountsChanged', (_accounts) => window.location.reload());
+		}
+	</script>
+</body>
+
 </html>
